--- a/index.html
+++ b/index.html
@@ -8,11 +8,95 @@
 
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css" />
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
-	<link rel="stylesheet" href="/assets/css/style.css" />
+	<link rel="stylesheet" href="/assets/css/styles.css" />
 	<title>Subham Panda | Web and App developer</title>
 </head>
 	<body>
-		NAVIGATION
+		<!-- NAVIGATION -->
+
+		<!-- NAVIGATION FOR LARGE SCREEN -->
+		<nav class="hide-on-small-only">
+			<ul class="side-nav fixed section table-of-contents">
+		
+			  <li class="logo">
+				<a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
+				  class="brand-logo grey-blue-text">
+				  <img src="/assets/img/subham.jpg" class="circle img-responsive profile-pic" alt="avatar">
+				</a>
+			  </li>
+		
+			  <li class="bold">
+				<a aria-label="Navigate to the AbouFt section" href="#about" class="waves-effect waves-dark teal-text"><i
+					class="mdi-social-person small"></i><span>About</span></a>
+			  </li>
+			  <li class="bold">
+				<a aria-label="Navigate to the Experience section" href="#experience"
+				  class="waves-effect waves-dark teal-text"><i
+					class="mdi-action-trending-up small"></i><span>Experience</span></a>
+			  </li>
+			  <li class="bold">
+		
+				<a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
+					class="mdi-action-assessment small"></i><span>Skills</span></a>
+			  </li>
+			  
+			  <li class="bold">
+				<a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
+					class="mdi-social-school small"></i><span>Education</span></a>
+			  </li>
+		
+			  <li class="bold">
+				<a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
+					class="mdi-content-mail small"></i><span>Contact</span></a>
+			  </li>
+		
+			  <li class="bold">
+				<a aria-label="Open Subham's resume in a new tab" href="#" target="_blank"
+				class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
+			  </li>
+			</ul>
+		  </nav>
+
+		  <!-- NAVIGATION FOR SMALL SCREEN -->
+		  <nav class="hide-on-large only trigger z-depth-1">
+			<a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
+			  class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+			<div class="name-title">
+			  <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Subham Subhasish Panda</a><span class="black-text">Web and App Developer</span>
+			</div>
+		  </nav>
+
+		  <nav class="hide-on-large only">
+			<ul id="slide-out" class="side-nav">
+			  <li class="bold">
+				<a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
+					class="mdi-social-person small"></i><span>About</span></a>
+			  </li>
+			  <li class="bold">
+				<a aria-label="Navigate to the Experience section" href="#experience"
+				  class="waves-effect waves-dark teal-text"><i
+					class="mdi-action-trending-up small"></i><span>Experience</span></a>
+			  </li>
+			  <li class="bold">
+				<a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
+					class="mdi-action-assessment small"></i><span>Skills</span></a>
+			  </li>
+		
+			  <li class="bold">
+				<a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
+					class="mdi-social-school small"></i><span>Education</span></a>
+			  </li>
+			  <li class="bold">
+				<a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
+					class="mdi-content-mail small"></i><span>Contact</span></a>
+			  </li>
+			  <li class="bold">
+				<a aria-label="Open Subham's Resume in a new tab"
+				  href="#" target="_blank"
+				  class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
+			  </li>
+			</ul>
+		  </nav>
 
 		MAIN SECTION
 
