feat: intro section added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<!-- NAVIGATION -->
 
 		<!-- NAVIGATION FOR LARGE SCREEN -->
+
 		<nav class="hide-on-small-only">
 			<ul class="side-nav fixed section table-of-contents">
 		
@@ -58,6 +59,7 @@
 		  </nav>
 
 		  <!-- NAVIGATION FOR SMALL SCREEN -->
+
 		  <nav class="hide-on-large only trigger z-depth-1">
 			<a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
 			  class="button-collapse"><i class="mdi-navigation-menu"></i></a>
@@ -98,17 +100,52 @@
 			</ul>
 		  </nav>
 
-		MAIN SECTION
+		
+		<main>
 
-		ABOUT SECTION
+			<!-- INTRO SECTION -->
 
-		EXPERIENCE SECTION
+			<section id="intro" class="section scrollspy full-height">
+			  <div class="overlay"></div>
+			  <div class="container">
+				<div class="col-md-9">
+				  <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
+					<div class="caption">
+					  <h2>Hi, I'm <span class="teal">Subham Subhasish Panda.</span></h2>
+					  <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
+					  <h5>Self-driven, quick starter, passionate programmer with a curious mind who loves solving a very complex, very challenging real-world problems.</h5>
+					</div>
+					<div class="social">
+					  <a href="https://www.linkedin.com/in/subham-panda-614aa619b" target="_blank">
+						<button class="icon-btn linkedin">
+						  <i class="fa fa-linkedin"></i>
+						</button>
+					  </a>
+					  <a href="https://github.com/Subham-Panda/" target="_blank">
+						<button class="icon-btn github">
+						  <i class="fa fa-github"></i>
+						</button>
+					  </a>
+					</div>
+					<div class='buttons'>
+					  <a href="#about" class="readme">Read More</a>
+					  <a href="#contact" class="contactme">Contact Me</a>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			</section>
+		</main>
 
-		SKILLS SECTION
+		<!-- ABOUT SECTION -->
 
-		EDUCATION SECTION
+		<!-- EXPERIENCE SECTION -->
 
-		CONTACT SECTION
+		<!-- SKILLS SECTION -->
+
+		<!-- EDUCATION SECTION -->
+
+		<!-- CONTACT SECTION -->
 
 	</body>
 </html>
