feat: about section added

--- a/index.html
+++ b/index.html
@@ -135,9 +135,22 @@
 				</div>
 			  </div>
 			</section>
-		</main>
 
-		<!-- ABOUT SECTION -->
+			<!-- ABOUT SECTION -->
+
+			<section id="about" class="section scrollspy">
+				<h3 class="page-title white-text teal">About</h3>
+				<div class="container flow-text">
+				  <p>        
+					I am a Full Stack MERN developer with 1 year of experience in Web Development and App Development with a willingness to learn and master Deep Learning and Computer Vision.
+				  </p>
+				  <p>
+					Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, which provides professional development, interesting experiences and personal growth.
+				  </p>
+				</div>
+			</section>
+
+		
 
 		<!-- EXPERIENCE SECTION -->
 
@@ -146,6 +159,8 @@
 		<!-- EDUCATION SECTION -->
 
 		<!-- CONTACT SECTION -->
+
+	</main>
 
 	</body>
 </html>
