--- a/index.html
+++ b/index.html
@@ -457,5 +457,29 @@
 
 		</main>
 
+		<script src="assets/vendor/typed.js/typed.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/js/materialize.min.js"></script>
+
+		<script>
+			$(document).ready(function () {
+			$(".scrollspy").scrollSpy()
+			$(".button-collapse").sideNav({
+				menuWidth: 190, 
+				edge: "left", 
+				closeOnClick: true 
+			})
+			})
+		</script>
+
+		<script type="text/javascript">
+			var typed = new Typed('.typing',{
+			strings: ["Frontend Developer", "Backend Developer", "Fullstack Developer", "ReactJS Developer", "React Native Developer", "Flutter Developer", "ML Enthusiast", "Fast Learner"],
+			loop: true,
+			typeSpeed: 80,
+			backSpeed: 40
+			});
+		</script>
+
 	</body>
 </html>
