--- a/index.html
+++ b/index.html
@@ -70,33 +70,36 @@
 
 		  <nav class="hide-on-large only">
 			<ul id="slide-out" class="side-nav">
-			  <li class="bold">
-				<a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
-					class="mdi-social-person small"></i><span>About</span></a>
-			  </li>
-			  <li class="bold">
-				<a aria-label="Navigate to the Experience section" href="#experience"
-				  class="waves-effect waves-dark teal-text"><i
-					class="mdi-action-trending-up small"></i><span>Experience</span></a>
-			  </li>
-			  <li class="bold">
-				<a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
-					class="mdi-action-assessment small"></i><span>Skills</span></a>
-			  </li>
-		
-			  <li class="bold">
-				<a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
-					class="mdi-social-school small"></i><span>Education</span></a>
-			  </li>
-			  <li class="bold">
-				<a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
-					class="mdi-content-mail small"></i><span>Contact</span></a>
-			  </li>
-			  <li class="bold">
-				<a aria-label="Open Subham's Resume in a new tab"
-				  href="#" target="_blank"
-				  class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
-			  </li>
+				<li class="bold logo-small">
+					<a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><img src="/assets/img/subham.jpg" class="circle img-responsive profile-pic profile-pic-small" alt="avatar"></a>
+				</li>
+				<li class="bold">
+					<a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
+						class="mdi-social-person small"></i><span>About</span></a>
+				</li>
+				<li class="bold">
+					<a aria-label="Navigate to the Experience section" href="#experience"
+					class="waves-effect waves-dark teal-text"><i
+						class="mdi-action-trending-up small"></i><span>Experience</span></a>
+				</li>
+				<li class="bold">
+					<a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
+						class="mdi-action-assessment small"></i><span>Skills</span></a>
+				</li>
+			
+				<li class="bold">
+					<a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
+						class="mdi-social-school small"></i><span>Education</span></a>
+				</li>
+				<li class="bold">
+					<a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
+						class="mdi-content-mail small"></i><span>Contact</span></a>
+				</li>
+				<li class="bold">
+					<a aria-label="Open Subham's Resume in a new tab"
+					href="#" target="_blank"
+					class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
+				</li>
 			</ul>
 		  </nav>
 
