--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css" />
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
-	<link rel="stylesheet" href="/assets/css/styles.css" />
+	<link rel="stylesheet" href="assets/css/styles.css" />
 	<title>Subham Panda | Web and App developer</title>
 </head>
 	<body>
@@ -22,7 +22,7 @@
 			  <li class="logo">
 				<a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
 				  class="brand-logo grey-blue-text">
-				  <img src="/assets/img/subham.jpg" class="circle img-responsive profile-pic" alt="avatar">
+				  <img src="assets/img/subham.jpg" class="circle img-responsive profile-pic" alt="avatar">
 				</a>
 			  </li>
 		
@@ -71,7 +71,7 @@
 		  <nav class="hide-on-large only">
 			<ul id="slide-out" class="side-nav">
 				<li class="bold logo-small">
-					<a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><img src="/assets/img/subham.jpg" class="circle img-responsive profile-pic profile-pic-small" alt="avatar"></a>
+					<a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><img src="assets/img/subham.jpg" class="circle img-responsive profile-pic profile-pic-small" alt="avatar"></a>
 				</li>
 				<li class="bold">
 					<a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
@@ -166,7 +166,7 @@
 						<div class="row">
 						<div class="col s12 m2">
 							<a href="https://csivit.com/" target="_blank"><img alt="CSI-VIT logo"
-								src="/assets/img/csivit.jpeg" class="responsive-img center-block" /></a>
+								src="assets/img/csivit.jpeg" class="responsive-img center-block" /></a>
 						</div>
 						<div class="col s12 m10">
 							<p>
@@ -186,7 +186,7 @@
 						<div class="row">
 						<div class="col s12 m2">
 							<a href="https://acmvit.in/" target="_blank"><img alt="ACM logo"
-								src="/assets/img/acm.jpeg" class="responsive-img center-block" /></a>
+								src="assets/img/acm.jpeg" class="responsive-img center-block" /></a>
 
 						</div>
 						<div class="col s12 m10">
@@ -208,7 +208,7 @@
 						<div class="row">
 						<div class="col s12 m2">
 							<a href="http://helphenindia.org/" target="_blank"><img alt="Helphen India logo"
-								src="/assets/img/helphen.png" class="responsive-img center-block" /></a>
+								src="assets/img/helphen.png" class="responsive-img center-block" /></a>
 
 						</div>
 						<div class="col s12 m10">
@@ -239,31 +239,31 @@
 						<h4 class="brown-text light">Languages and Databases</h4>
 						<div class="row text-center">
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/golang.png" class="responsive-img" />
+							<img alt="" src="assets/img/golang.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/python.jpg" class="responsive-img" />
+							<img alt="" src="assets/img/python.jpg" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/html5.jpg" class="responsive-img" />
+							<img alt="" src="assets/img/html5.jpg" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/css3.jpg" class="responsive-img" />
+							<img alt="" src="assets/img/css3.jpg" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/mysql.jpg" class="responsive-img" />
+							<img alt="" src="assets/img/mysql.jpg" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/javascript.png" class="responsive-img" />
+							<img alt="" src="assets/img/javascript.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/dart.png" class="responsive-img" />
+							<img alt="" src="assets/img/dart.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/mongoDB.png" class="responsive-img" />
+							<img alt="" src="assets/img/mongoDB.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/firebase.png" class="responsive-img" />
+							<img alt="" src="assets/img/firebase.png" class="responsive-img" />
 							</div>
 						</div>
 						</div>
@@ -274,37 +274,37 @@
 						<h4 class="brown-text light">Libraries</h4>
 						<div class="row text-center">
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/numpy.jpg" class="responsive-img" />
+							<img alt="" src="assets/img/numpy.jpg" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/pandas.jpg" class="responsive-img" />
+							<img alt="" src="assets/img/pandas.jpg" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/sk-learn.jpg" class="responsive-img" />
+							<img alt="" src="assets/img/sk-learn.jpg" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/matplotlib.jpg" class="responsive-img" />
+							<img alt="" src="assets/img/matplotlib.jpg" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/express.png" class="responsive-img" />
+							<img alt="" src="assets/img/express.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/jquery.png" class="responsive-img" />
+							<img alt="" src="assets/img/jquery.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/ejs.png" class="responsive-img" />
+							<img alt="" src="assets/img/ejs.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/pug.png" class="responsive-img" />
+							<img alt="" src="assets/img/pug.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/socket.png" class="responsive-img" />
+							<img alt="" src="assets/img/socket.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/redux.webp" class="responsive-img" />
+							<img alt="" src="assets/img/redux.webp" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/graphql.png" class="responsive-img" />
+							<img alt="" src="assets/img/graphql.png" class="responsive-img" />
 							</div>
 						</div>
 						</div>
@@ -315,22 +315,22 @@
 						<h4 class="brown-text light">Frameworks</h4>
 						<div class="row text-center">
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/nodejs.png" class="responsive-img" />
+							<img alt="" src="assets/img/nodejs.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/reactjs.png" class="responsive-img" />
+							<img alt="" src="assets/img/reactjs.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />
+							<img alt="" src="assets/img/bootstrap.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/flutter.png" class="responsive-img" />
+							<img alt="" src="assets/img/flutter.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/keras.png" class="responsive-img" />
+							<img alt="" src="assets/img/keras.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/tensorflow.png" class="responsive-img" />
+							<img alt="" src="assets/img/tensorflow.png" class="responsive-img" />
 							</div>
 						</div>
 						</div>
@@ -343,22 +343,22 @@
 			
 			
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/git.png" class="responsive-img" />
+							<img alt="" src="assets/img/git.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/aws.png" class="responsive-img" />
+							<img alt="" src="assets/img/aws.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/google-cloud.png" class="responsive-img" />
+							<img alt="" src="assets/img/google-cloud.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/heroku.png" class="responsive-img" />
+							<img alt="" src="assets/img/heroku.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/npm.png" class="responsive-img" />
+							<img alt="" src="assets/img/npm.png" class="responsive-img" />
 							</div>
 							<div class="col s4 m2">
-							<img alt="" src="/assets/img/expo.jpeg" class="responsive-img" />
+							<img alt="" src="assets/img/expo.jpeg" class="responsive-img" />
 							</div>
 						</div>
 						</div>
