--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			  </li>
 		
 			  <li class="bold">
-				<a aria-label="Open Subham's resume in a new tab" href="#" target="_blank"
+				<a aria-label="Open Subham's resume in a new tab" href="https://drive.google.com/file/d/1LnTEiS4W5095lN_aw3bZX5jC9_k5eg5g/view?usp=sharing" target="_blank"
 				class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
 			  </li>
 			</ul>
